@@ -2,12 +2,13 @@ package greencity;
 
 import jakarta.validation.ConstraintValidatorContext;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 public class ModelUtils {
 
     public static URL getUrl() throws MalformedURLException {
-        return new URL(TestConst.SITE);
+        return URI.create(TestConst.SITE).toURL();
     }
 
     public static ConstraintValidatorContext.ConstraintViolationBuilder getConstraintViolationBuilder() {
