@@ -5,7 +5,6 @@ import greencity.dto.achievement.UserAchievementVO;
 import greencity.dto.achievement.UserVOAchievement;
 import greencity.dto.user.UserVO;
 import greencity.entity.User;
-import java.util.stream.Collectors;
 import org.modelmapper.AbstractConverter;
 import org.springframework.stereotype.Component;
 
@@ -26,7 +25,7 @@ public class UserVOAchievementMapper extends AbstractConverter<User, UserVOAchie
                         .id(userAchievement.getAchievement().getId())
                         .build())
                     .build())
-                .collect(Collectors.toList()) : null)
+                .toList() : null)
             .build();
     }
 }
