@@ -2,24 +2,20 @@ package greencity.service;
 
 import greencity.constant.CacheConstants;
 import greencity.dto.achievement.AchievementVO;
-import greencity.entity.UserAchievement;
 import greencity.repository.AchievementRepo;
-import greencity.repository.UserAchievementRepo;
 import java.util.List;
-import java.util.stream.Collectors;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.stereotype.Service;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 @EnableCaching
 public class AchievementServiceImpl implements AchievementService {
     private final AchievementRepo achievementRepo;
     private final ModelMapper modelMapper;
-    private final UserAchievementRepo userAchievementRepo;
 
     /**
      * {@inheritDoc}
@@ -32,16 +28,6 @@ public class AchievementServiceImpl implements AchievementService {
         return achievementRepo.findAll()
             .stream()
             .map(achieve -> modelMapper.map(achieve, AchievementVO.class))
-            .collect(Collectors.toList());
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void findUserAchievement(Long userId, Long achievementId) {
-        UserAchievement userAchievement = userAchievementRepo
-            .getUserAchievementByIdAndAchievementId(userId, achievementId);
-        userAchievementRepo.save(userAchievement);
+            .toList();
     }
 }
